--- a/webapp/package.json
+++ b/webapp/package.json
@@ -5,9 +5,7 @@
   "dependencies": {
     "@cypress/react18": "^2.0.0",
     "@testing-library/jest-dom": "^5.17.0",
-    "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
-    "@types/jest": "^27.5.2",
     "@types/node": "^16.18.67",
     "@types/react": "^18.2.41",
     "@types/react-dom": "^18.2.17",
@@ -23,7 +21,9 @@
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
-    "cy:run": "cypress run --component"
+    "cy:run": "cypress run --component",
+    "jest": "jest",
+    "test:ci": "npm run cy:run && npm run jest"
   },
   "eslintConfig": {
     "extends": [
@@ -45,6 +45,16 @@
   },
   "devDependencies": {
     "@babel/plugin-proposal-private-property-in-object": "^7.21.11",
-    "cypress": "^13.6.0"
+    "@babel/preset-env": "^7.23.5",
+    "@babel/preset-react": "^7.23.3",
+    "@testing-library/react": "^14.1.2",
+    "@types/jest": "^27.5.2",
+    "babel-jest": "27.1",
+    "cypress": "^13.6.0",
+    "jest": "^27.5.1",
+    "jest-dom": "^4.0.0",
+    "jest-transform-stub": "^2.0.0",
+    "react-test-renderer": "^18.2.0",
+    "ts-jest": "^27.1.5"
   }
 }
