--- a/webapp/tsconfig.json
+++ b/webapp/tsconfig.json
@@ -19,7 +19,7 @@
     "isolatedModules": true,
     "noEmit": true,
     "jsx": "react-jsx",
-    "types": ["cypress"]
+    "types": ["cypress", "jest"]
   },
   "include": [
     "src",
