--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -25,9 +25,14 @@ jobs:
 
       # Runs a single command using the runners shell
       - name: jest
-        run: npm run jest
+        working-directory: ./webapp
+        run: |
+          npm install
+          npm run jest
 
       # Runs a set of commands using the runners shell
       - name: cypress
+        working-directory: ./webapp
         run: |
+          npm install
           npm run cy:run
