--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -24,15 +24,10 @@ jobs:
       - uses: actions/checkout@v3
 
       # Runs a single command using the runners shell
-      - name: jest
+      - name: test
         working-directory: ./webapp
         run: |
           npm install
           npm run jest
-
-      # Runs a set of commands using the runners shell
-      - name: cypress
-        working-directory: ./webapp
-        run: |
-          npm install
           npm run cy:run
+          
