--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -18,7 +18,7 @@ jobs:
     # The type of runner that the job will run on
     runs-on: ubuntu-latest
     env:
-      EDEAM_KEY:
+      EDAMAN_KEY: ${{ secrets.EDAMAN_KEY }}
 
     # Steps represent a sequence of tasks that will be executed as part of the job
     steps:
