--- a/webapp/package.json
+++ b/webapp/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "dependencies": {
     "@cypress/react18": "^2.0.0",
+    "@reduxjs/toolkit": "^2.2.1",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/user-event": "^13.5.0",
     "@types/node": "^16.18.67",
@@ -11,6 +12,7 @@
     "@types/react-dom": "^18.2.17",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-redux": "^9.1.0",
     "react-router-dom": "^6.22.0",
     "react-scripts": "5.0.1",
     "sass": "^1.69.5",
