--- a/webapp/package.json
+++ b/webapp/package.json
@@ -55,6 +55,9 @@
     "@types/jest": "^27.5.2",
     "babel-jest": "27.1",
     "cypress": "^13.6.0",
+    "eslint": "^8.57.0",
+    "eslint-plugin-react": "^7.33.2",
+    "eslint-plugin-react-hooks": "^4.6.0",
     "jest": "^27.5.1",
     "jest-dom": "^4.0.0",
     "jest-transform-stub": "^2.0.0",
