--- a/webapp/.gitignore
+++ b/webapp/.gitignore
@@ -1,4 +1,7 @@
 # See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
+.env
+.env.production
+.env.test
 
 # dependencies
 /node_modules
