--- a/webapp/package.json
+++ b/webapp/package.json
@@ -4,15 +4,20 @@
   "private": true,
   "dependencies": {
     "@cypress/react18": "^2.0.0",
+    "@reduxjs/toolkit": "^2.2.1",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/user-event": "^13.5.0",
+    "@types/axios": "^0.14.0",
     "@types/node": "^16.18.67",
     "@types/react": "^18.2.41",
     "@types/react-dom": "^18.2.17",
+    "axios": "^1.6.8",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-redux": "^9.1.0",
     "react-router-dom": "^6.22.0",
     "react-scripts": "5.0.1",
+    "redux-thunk": "^3.1.0",
     "sass": "^1.69.5",
     "typescript": "^4.9.5",
     "web-vitals": "^2.1.4"
@@ -52,6 +57,9 @@
     "@types/jest": "^27.5.2",
     "babel-jest": "27.1",
     "cypress": "^13.6.0",
+    "eslint": "^8.57.0",
+    "eslint-plugin-react": "^7.33.2",
+    "eslint-plugin-react-hooks": "^4.6.0",
     "jest": "^27.5.1",
     "jest-dom": "^4.0.0",
     "jest-transform-stub": "^2.0.0",
